# taxcode

./: .env.example  .gitignore  .~税务app_design.xlsx  README.md  architecture.md  design-system.md  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json  税务app_design.xlsx  第一批可直接丢进 Cursor 的启动 prompt.md
.cursor/rules/: backend-standards.mdc  core-stack-and-mission.mdc  database-queue-and-quality.mdc  design-system-rules.mdc  documentation-security-performance.mdc  frontend-standards.mdc  response-style-and-done.mdc  rust-tax-engine.mdc  testing-strategy.mdc  ui-ux-rules.mdc
apps/api/: drizzle.config.ts  eslint.config.json  package.json  tsconfig.build.json  tsconfig.json
apps/api/migrations/: 0000_natural_gorgon.sql
apps/api/migrations/meta/: 0000_snapshot.json  _journal.json
apps/api/src/: app.ts  config.ts  index.ts  server.ts
apps/api/src/db/: index.ts  seed.ts
apps/api/src/db/schema/: index.ts
apps/api/src/jobs/: worker.ts
apps/api/src/modules/audit/: index.ts
apps/api/src/modules/auth/: auth.routes.ts  index.ts
apps/api/src/modules/documents/: document.routes.ts  index.ts
apps/api/src/modules/filings/: filing-state-machine.ts  filing.routes.ts  index.ts
apps/api/src/plugins/: auth.ts  error-handler.ts
apps/tax-engine/: Cargo.toml
apps/tax-engine/src/: main.rs  tests.rs
apps/web/: .env.example  next.config.ts  package.json  tailwind.config.ts
apps/web/docs/: design-token-mapping.md
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/lib/: api.ts  mock-data.ts
docs/: information-architecture.md
(+86 files in other folders)
